samples/_failures_safe/1761460602_689165_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ebe8a5a4.c: In function ‘main’:
./samples/SAFE/__tmp_ebe8a5a4.c:156:20: error: missing terminating " character
  156 |             printf("No entries found
      |                    ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ebe8a5a4.c:156:13: error: expected expression at end of input
  156 |             printf("No entries found
      |             ^~~~~~
./samples/SAFE/__tmp_ebe8a5a4.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ebe8a5a4.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ebe8a5a4.c:156:13: error: expected declaration or statement at end of input
